# Trinity

./: CMakeLists.txt  README.md  qml.qrc
include/: callobject.h  emote.h  eventmodel.h  matrixcore.h  network.h  room.h  settings.h
qml/: AccountCreation.qml  BackButton.qml  BarButton.qml  CallDialog.qml  Client.qml  ColorCell.qml  Communities.qml  Community.qml  Directory.qml  IconButton.qml  ImageViewer.qml  Login.qml  Profile.qml  RoomSettings.qml  ServerSelection.qml  Settings.qml  main.qml
qml/style/: Menu.qml  MenuItem.qml
resources/: call.html  qtquickcontrols2.conf
resources/web/: call.js
src/: eventmodel.cpp  main.cpp  matrixcore.cpp
